Update ESStorage and  SQLStorage with new milekat utils